# RPG-Archive-Learn

./: .editorconfig  .gitignore  CMakeLists.txt  Equipment.cpp  GEMINI.md  Game.cpp  Pic.txt  Pokemon.cpp  README.md  RPG-Archive-Learn.sln  User.cpp  gemini_cli_config.json  main.cpp
RPG-Archive-Learn/: Armor.cpp  Armor.h  BaseEquipment.cpp  BaseEquipment.h  BasePokeController.cpp  BasePokeController.h  BasePokeModel.cpp  BasePokeModel.h  BasePokeView.cpp  BasePokeView.h  CharacterModel.cpp  CharacterModel.h  Common.cpp  Common.h  Decoration.cpp  DialogueManager.cpp  DialogueManager.h  EquipManager.cpp  EquipManager.h  FirePokeController.cpp  FirePokeController.h  FirePokeModel.cpp  FirePokeModel.h  FirePokeView.cpp  FirePokeView.h  FlyPokeController.cpp  FlyPokeController.h  FlyPokeModel.cpp  FlyPokeModel.h  FlyPokeView.cpp  FlyPokeView.h  GameManager.cpp  GameManager.h  GhostPokeController.cpp  GhostPokeController.h  GhostPokeModel.cpp  GhostPokeModel.h  GhostPokeView.cpp  GhostPokeView.h  GrassPokeController.cpp  (+33 more)
data/: users.txt
include/: Equipment.h  Game.h  Pokemon.h  User.h
include/Archive/: Archive.h
include/Base/: Signal.h  Singleton.h
include/Common/: Common.h  Types.h
include/Equip/: Accessory.h  Armor.h  Equipment.h
include/Equipment/: Armor.h  BaseEquipment.h  Decoration.h
include/Fight/: DefaultFightState.h  EnemyFightState.h  PlayerFightState.h
include/Fsm/: BaseState.h  StateMachine.h
include/Interfaces/: PreservableObj.h
include/Managers/: ArchiveManager.h  DialogueManager.h  EquipManager.h  FightManager.h  GameManager.h  LevelManager.h  LogManager.h  PokeManager.h  UIManager.h  UserManager.h
include/Poke/: FirePokemon.h  FlyingPokemon.h  GhostPokemon.h  GrassPokemon.h  IcePokemon.h  Pokemon.h
include/Singletons/: EquipManager.h  Game.h  PokemonFactory.h  UI.h  UserManager.h
include/Skills/: NormalAttackSkill.h  Skill.h  Skills.cpp  Skills.h
include/User/: User.h  UserModel.h
src/: Equipment.cpp  Game.cpp  Main.cpp  Pokemon.cpp  User.cpp  main.cpp  test.cpp
(+121 files in other folders)
